# vibecheck

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.dev.yml  docker-compose.yml  package.json  playwright.config.ts  pyproject.toml  restore_claude_official.sh  scythe.toml  sentiment_analysis_improvement.md  vite.config.ts
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/03-api-integration/: 03-VERIFICATION.md
.planning/phases/03.1-entity-seeding-automation/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-01-VERIFICATION.md  03.1-RESEARCH.md
.planning/phases/05-infrastructure/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-data-collection/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-tier-1-sentiment-aggregation/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-tier-2-llm-aspect-extraction/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-05-PLAN.md  08-05-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-frontend-evolution/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-05-PLAN.md  09-05-SUMMARY.md  09-06-PLAN.md  09-06-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-verification-documentation-cleanup/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-entity-linking/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/quick/001-frontend-backend-alignment/: 001-PLAN.md  001-SUMMARY.md
.planning/quick/002-frontend-backend-integration-phase1/: 002-PLAN.md  002-SUMMARY.md
.planning/quick/003-frontend-backend-integration-phase2/: 003-PLAN.md  003-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.ralph/: fix_plan.md
backend/: main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 002_add_unique_constraint_sentiment_timeseries.py  006_reset_schema.py  007_add_sentiment_columns_to_posts.py  008_create_sentiment_rollup_table.py  009_merge_heads.py  435b852d9d02_add_sentiment_columns.py
backend/api/routes/: admin.py  entities.py  sentiment.py
backend/api/schemas/: aspect.py  sentiment.py
backend/db/: __init__.py  models.py
backend/pipeline/: models.py  scheduler.py
backend/pipeline/clients/: devto_client.py  discourse_client.py  hackernews_client.py  reddit_client.py
backend/pipeline/jobs/: __init__.py  aggregate_sentiment.py  collect_devto.py  collect_discourse.py  collect_hackernews.py  collect_reddit.py  extract_aspects.py  extract_entity_mentions.py  score_sentiment.py
backend/pipeline/services/: deduplication_service.py  entity_service.py  filter_service.py  llm_provider.py  mention_service.py  sentiment_service.py  storage_service.py
backend/scripts/: seed_entities.py
backend/tests/: __init__.py  conftest.py  test_aspect_api.py  test_aspect_extraction.py  test_llm_provider.py  test_mention_extraction.py
backend/utils/: constants.py
e2e/: mock-api.mjs  phase9.spec.ts
lib/db/: pyproject.toml
lib/db/lib_db/: __init__.py  pool.py  queries.py
lib/db/tests/: conftest.py  test_smoke.py
scripts/: codegen.sh  db-apply.sh  gen-openapi.sh  pg-env.sh
services/api/: Dockerfile  openapi.json  pyproject.toml
services/api/api/: aggregate.py  dependencies.py  main.py  models.py  periods.py  routes.py
services/api/tests/: conftest.py  test_aggregate.py  test_harness.py  test_health.py  test_models.py  test_openapi.py  test_periods.py  test_sentiment.py  test_tools.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/ingestion/: detection.py  hn.py  main.py  pipeline.py  posts.py  publisher.py  reddit.py
services/ingestion/tests/: conftest.py  test_detection.py  test_hn.py  test_pipeline.py  test_publisher.py  test_reddit.py
services/worker/: Dockerfile  pyproject.toml
services/worker/tests/: conftest.py  test_consumer.py  test_messages.py  test_processing.py  test_sentiment.py
services/worker/worker/: consumer.py  main.py  messages.py  processing.py  sentiment.py
sql/: schema.sql
sql/queries/: analysis.sql  mentions.sql  posts.sql  tools.sql
sql/seeds/: demo_facts.sql  tools.sql
src/components/: AspectSentimentChart.test.tsx  AspectSentimentChart.tsx  Header.tsx  SearchDropdown.tsx  SentimentBar.tsx  SourceFilterToggle.test.tsx  SourceFilterToggle.tsx  TabFilter.tsx  ToolCardSkeleton.tsx
src/components/ui/: carousel.tsx  chart.tsx  (+1 more)
src/hooks/: useAspectSentiment.test.ts  useAspectSentiment.ts  useLanguage.ts  useSentimentTimeSeries.ts  useTools.ts
src/pages/: Detail.test.tsx  Detail.tsx
src/services/: api.ts  entityTransformer.ts  trendCalculator.ts
src/test/: mocks.ts  setup.ts
src/types/: api.ts
tests/: test_api_health.py  test_smoke.py
(+6 files in other folders)
