[project]
name = "vibecheck"
version = "0.1.0"
description = "Vibecheck monorepo"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "mypy>=1.18",
    "ruff>=0.15",
]

[tool.uv.workspace]
members = [
    "lib/db",
    "services/ingestion",
    "services/worker",
    "services/api",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv", "frontend"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ["\\.venv", "frontend", "build", "dist"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
