[project]
name = "ingestion"
version = "0.1.0"
description = "Vibecheck ingestion service"
requires-python = ">=3.13"
dependencies = [
    "lib-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[tool.uv.sources]
lib-db = { workspace = true }
