[project]
name = "ingestion"
version = "0.1.0"
description = "Vibecheck ingestion service"
requires-python = ">=3.13"
dependencies = [
    "lib-db",
    "aio-pika>=9.5",
    "httpx>=0.27",
    "praw>=7.7",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[tool.uv.sources]
lib-db = { workspace = true }
